@@ -1,10 +1,8 @@
 AUX laditools-1.0_rc1-no_extra_docs.patch 706 SHA256 02a04c32d68ba05eb9eb20133e56cc6703f10564c0295bcb4800c8b7b7b13b7b SHA512 415c2e921134511f5b3c3c339f3b043bd891e86dc75ab43e0675b4f3b8e56cf486383813a90c04ce9cb8286e08fe454be1c8db5ee3bfa9166d43fd7ba57db7b3 WHIRLPOOL b3c6946210ffa1ca253acea8e4451870043cadb91062c07649b9936ab3dbcc54a5a5aaaf0b49234800d99e8723719a8541434b77f053b3d336ae3d761aec4158
 AUX laditools-1.0_rc8-rsvg.patch 875 SHA256 490a32e8b0380cad6664703e6ba5644d04d46f532a3b0d67bbcceffeabbb279f SHA512 1589eec846f2e4565bf0c713f81b87a171d2e1180ac71a9d7cd4e9fb3eba5af1248363ed2ed3fa3b85a509c4ba1ed5986f34d7df32797fa0a288b73d35767eb1 WHIRLPOOL 8421eb25b55fa1624f29c005abc06e9ca32adce67170f714aaecd684963e18228b94186788c033fcac779e4472cc895f8c73f03445fc576d50f515242b06a6a0
 DIST laditools-1.0.1.tar.gz 65264 SHA256 f0edd1ff45514dce2206ba01a43b362155787231046456367e48f9bc10d2c1e1 SHA512 d40c361373be55ee448395712e3f0d79b844029e110d6d4c8eb51fb3d47c9d2d45ec04e6e551f7dd656872d22d322cd5969bfe57ac9a94663b566573e40d7a8b WHIRLPOOL e4caf31bb9456d5c34c09c9a15f63da991ff75beeb5d67f936d41443b48724878ea08b7b295675f95705595629bea72093ee079fff0bcceab74e721ef7266a3f
-DIST laditools-1.0~rc8.tar.gz 59791 SHA256 7b1bd034d1b51d00af8919b0bc2c4bbd8a817d3d08b77b4dc8dc160a14213c45 SHA512 9dc4cd5e7e04b1dfc924c213448be0ae360469c3df19736bf0773fe9c47f0fa777cf7013fa46279244cd95541ff9b9c0f108756ac02a2ccec8c788169917beeb WHIRLPOOL a1b95a06d4bc7cdb74f18f11f63dcf267deba3a4875b198d16aa22928602376d37214bbc2e46d471a85fb7201bd14edee6c30844f466697efad6cbae09952f91
-EBUILD laditools-1.0.1-r2.ebuild 1115 SHA256 fcc59855650d8c53dc824f3935a54a1b536602abde36977188928f91eca49df4 SHA512 dd76afadac39e594e995253f5fda8b0af7ec117f85518ee60dd192d143edaddca7b734cf00f4b0bad12c02e3ec12e467228f14db3201697d695113c851b24eb2 WHIRLPOOL 3090eb0cabce24c00374ec119abeabc6bf23872e89ddb8815c4b83f4b767bb76fb684ab2b01112e25956a924ee5b110830611a8c3e02e3eba30c8058401a10d0
-EBUILD laditools-1.0.1-r3.ebuild 1302 SHA256 5b3bb12eaa182f2c45bdb3a3410bfa115f35fe121a63e3ceaa77e48cdf8879e5 SHA512 fb2ba6df751b8393d085d026713f316c745cfe1b2195f611546c01263e49436821e4965ddd0f8c79280a6f9f7e1c45449e60f17cce1defab878028760982dda3 WHIRLPOOL daf369073bbbda7f6e46457096ba54445204c46c72c5b95abdd6b9dc790310ed775837b20eff602502a67afc1241dcaeb30689cebea0c3c54b536d95c09f5bb1
-EBUILD laditools-1.0_rc8.ebuild 941 SHA256 3fe8c62b97e3ef21043303b455370af1fe239edd7a560285aa382a90609682b7 SHA512 e41d3b6d460a250baddece730b9d72acf52bae23d56531531f115b75c182cfc9e522a0aaa33ded0d2b5967f9710aaf58a7a41a1d20e31dd19da35c53c49b7893 WHIRLPOOL c2ffea4c0131b5ce5e73db2b9c90a782f2df3371f9c65910e1fddb362bff670b9d7fcfc31e72756ef24dbfa9add8f6fd615cb00ca07ca8c094fb55eb09374ffa
-EBUILD laditools-9999-r1.ebuild 1271 SHA256 1eb88683acdf4e35958c45d84f6144a443becd937b53d3555b196ec2952b1f17 SHA512 966ad3ce2b5b88c8a05ba38904d60d46c418ac9e058ef0d0d5ab3a548a7d9b152d5cad2200ca5ab487ac4133be0c7df364e966a2a95598df4bced3001a5b93cb WHIRLPOOL e85823f200363ba3db505f1153169f268fca3babcaa95ede659962e71ec4c5cf6ddbb255fc1721dfe1e6c8c438955d2da4da9616ee3d83ba8628d8c4f291c42e
-MISC ChangeLog 2595 SHA256 14b620b950352f5d7568bca982f4ef8a5f2c2481ae0df50c48634fbb0e6f6e9d SHA512 af1b0215936c2483a2df1e4f9c66f84cbcbdee193fead5c9b4218c5f0266e7c72cd88e769b3dac8aa0cccdcd85b333b411a84bff5facf57249aa554f79f50001 WHIRLPOOL d2d5369f19d92f7e682964ab09a4322ff7008388e8c4469c2593f2507e9ba1c6f8f41771583191f3b047b8f766ceae720db2f38a2d333454026f527ab83955ea
+EBUILD laditools-1.0.1-r2.ebuild 1109 SHA256 2ee8098b2f5bbb2f5f0d91e9898e209d14522f3881d27941b5468c989c0f2881 SHA512 356e2b1aaab6852e4ecd94b02d0878d6100d9deaa148ad95f82146e30247ff788a615500669d2fb105ec63614d146f05aa41f6b4cccc6b39152b8ff79f577547 WHIRLPOOL 162a964e9167f4fb3486e2c9c86c527fed188032986b699f0c2cd94dd98418b382edaf0b19c78d930c4bcaf2adb44e5c50e70375338188a47ce2e331387d0156
+EBUILD laditools-1.0.1-r3.ebuild 1296 SHA256 c05d79e0c84d1a0d37e6280b9bbfa29162e5fda7f654b68120016037bf4143c7 SHA512 fbcc70d212e2268ed01ab5e9d8d5040d9150c80c26f3c359a106bc2e59df25b338eeb87b5b191d68f5391444510778b18fe4814411b0fdadb0b076ec43acf6c4 WHIRLPOOL ee535199f0559f8518e6d4695085d2d75f12b43dbb8723d727234d125ffa24e886929604ef5ad41e23cb81e4f841b1156368fb6f16942719cf8819b583989979
+EBUILD laditools-9999-r1.ebuild 1265 SHA256 61d6ac5b8824814c7438c79fa2517a5f2b43780090c9cdc17e076f9f8dd41e82 SHA512 00fcdda2d0437ae1bffea7ee27d989a53e237ebd2ef8e67996cb3da3900a26fecdeba676e817eedbf117aef5679bf7138bf901f30af2b20e0181bbf81708992a WHIRLPOOL 3c86f3e5920a8d83a2ce3299e0948a39b65d6aef8b372c6ea64c7e647cbc128fcd697ba7275936108d63606cc931e1cc118f0cb4691ee45e3819f24a23da32b6
+MISC ChangeLog 2702 SHA256 e9704f186dfb151d4cdb226477f027f3d6449142720628af1619180b7c16e107 SHA512 ab4c0526ccafa0e4bc4fa9a3ae6e461fd3c2900ef5d16ca592252f775a8c237b4ee92e4054af1b695a197df87730be7292904853b5e82671fa6a4b1e8d5a8a67 WHIRLPOOL e010da016254760898a29f783077ecf295238cb64503ef6c19c6a28f7e3c968fcf2a8e3b568056fa76095ebf3866bb152e9dceaedb7b7f71858d0fd90c45d561
 MISC metadata.xml 1499 SHA256 e177de6b4621c7209101caa71561308869c9202c05a93b140d5fe6a698488b3f SHA512 97ea49611d11b1f790a797979cfde3ec6b47d490a3b2fa34babb049075d9255939727f40ace3cbaad2964230c630b48b7e4a14dc3bc343282f5dfe9c3a08509a WHIRLPOOL 626792ca02c5e53d81c28d27b599b867306f7f14ef1c4e5c006d7eba76c1ab7c56bb80e73d89a42e1f5266130f4bf5466852cf8b776143d14e98c42ab4d1e46f
