@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/laditools
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Nov 2015; Frieder Buerzele <evermind@tuxfamily.org>
+  -laditools-1.0_rc8.ebuild:
+  remove old ebuild
 
 *laditools-1.0.1-r3 (01 Dec 2013)
 
